--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.thymeleaf.cache = false
-server.port = 2345
+server.port=2345
+
+spring.thymeleaf.cache=false
+
+spring.datasource.url=jdbc:mysql://localhost/hw2
+spring.datasource.username=root
+spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
