--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=2345
 
 spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mysql://localhost/hw2
+spring.datasource.url=jdbc:mysql://localhost/hw2?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
