--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:mysql://localhost/hw2?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
